---
source: analyzer/tests/errors.rs
expression: "error_string(\"[snippet]\", &src)"

---
error: `map` expects 2 arguments, but 3 were provided
  ┌─ [snippet]:3:6
  │
3 │   x: map<u8, u8, u8>
  │      ^^^ --  --  -- supplied 3 arguments
  │      │            
  │      expects 2 arguments



TypeError on line 3
pub def f():
  [31mx: map<u8, u8, u8>[0m
